[package]
name = "bridgefs"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["alloc"] }
blake3 = { version = "1.8.2", features = ["rayon", "serde"] }
bon = "3.6.5"
fuser = "0.15.1"
libc = "0.2.174"
serde = { version = "1.0.219", features = ["derive"] }
